src/app/shared/navbar/navbar.component.scss
.navbar {
    box-shadow: -8px 6px 38px #b5b0b0;
    background: #f9f9f9 !important;
    border-radius: 0px;
    min-height: 70px;
    margin-bottom: 0px;
}
.person-icon{
    font-size: 40px !important;
}
.user-icon {
    width: 80%;
    position: absolute;
    top: 0px;
    right: 0px;
    padding-top: 10px;
    padding-right: 30px;
    .user-name {
       padding: 8px 0px;
    vertical-align: bottom;
    }
   
    .app-heading {
        font-size: 27px;
        color: #0076bc;
        font-weight: bold;
        /* color: #f44336;*/
    }
}

